; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lowcomms.c_cbuf_eat.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lowcomms.c_cbuf_eat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cbuf = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cbuf*, i32)* @cbuf_eat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cbuf_eat(%struct.cbuf* %0, i32 %1) #0 {
  %3 = alloca %struct.cbuf*, align 8
  %4 = alloca i32, align 4
  store %struct.cbuf* %0, %struct.cbuf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.cbuf*, %struct.cbuf** %3, align 8
  %7 = getelementptr inbounds %struct.cbuf, %struct.cbuf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = sub nsw i32 %8, %5
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.cbuf*, %struct.cbuf** %3, align 8
  %12 = getelementptr inbounds %struct.cbuf, %struct.cbuf* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, %10
  store i32 %14, i32* %12, align 4
  %15 = load %struct.cbuf*, %struct.cbuf** %3, align 8
  %16 = getelementptr inbounds %struct.cbuf, %struct.cbuf* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.cbuf*, %struct.cbuf** %3, align 8
  %19 = getelementptr inbounds %struct.cbuf, %struct.cbuf* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = and i32 %20, %17
  store i32 %21, i32* %19, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
